# parlant-tool-service-starter

./: pyproject.toml
parlant_tool_service_starter/: service.py
