[tool.poetry]
name = "parlant-tool-service-starter"
version = "0.1.0"
description = "Hello"
authors = ["Yam Marcovitz <yam@emcie.co>"]
license = "apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
parlant = { path = "../parlant", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
